k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retail-analytics
  namespace: application
  labels:
    app: retail-analytics
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: retail-analytics
  template:
    metadata:
      labels:
        app: retail-analytics
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: retail-analytics
          image: image-registry.openshift-image-registry.svc.cluster.local:5000/application/retail-analytics:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 9990
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 3"]
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1024Mi"
          readinessProbe:
            httpGet:
              path: /retail-analytics/api/sales/health
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /retail-analytics/api/sales/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 30
