k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: retail-analytics
  namespace: application
  labels:
    app: retail-analytics
spec:
  type: ClusterIP
  selector:
    app: retail-analytics
  ports:
    - name: http
      port: 80
      targetPort: 8080
